test/e2e/fail/009-type-arity/expected.stderr
error[E0001]: type mismatch
 --> $FILE:5:9
  |
5 | let x = foo(1);
  |         ^^^^^^ expected `(Int, Int) -> Int`, found `Int -> d`
  |
